--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,13 @@
-# OS X
+## OS X Finder
 .DS_Store
-.AppleDouble
-.LSOverride
-Icon
-._*
-.Spotlight-V100
-.Trashes
 
-# Xcode
-#
+
+## Build generated
 build/
+DerivedData
+
+
+## Various settings
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -19,12 +17,39 @@ build/
 *.perspectivev3
 !default.perspectivev3
 xcuserdata
+
+
+## Other
 *.xccheckout
 *.moved-aside
-DerivedData
-*.hmap
-*.ipa
 *.xcuserstate
 *.xcscmblueprint
-*.gcno
-*.gcda
+!Objection.xcworkspace
+*.moved-aside
+*.swp
+_site
+pkg
+
+
+## Obj-C/Swift specific
+*.hmap
+*.ipa
+
+
+# Swift Package Manager
+.build/
+
+
+# CocoaPods
+#
+# We recommend against adding the Pods directory to your .gitignore. However
+# you should judge for yourself, the pros and cons are mentioned at:
+# https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
+#
+Pods/
+Podfile.lock
+
+
+# Carthage
+Carthage/Checkouts
+Carthage/Build
